--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multiparty": "^4.1.2",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
+    "request": "^2.65.0",
     "serve-favicon": "~2.2.0"
   }
 }
